// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayOembed display error on fetch fail 1`] = `
<div
  className="c-editor__error"
>
  <span>
    Error message
  </span>
</div>
`;

exports[`DisplayOembed renderers correctly 1`] = `
<iframe
  frameBorder="0"
  src={undefined}
  title={undefined}
/>
`;

exports[`DisplayOembed renderers correctly 2`] = `
<iframe
  frameBorder="0"
  src="iframe.html"
  title="unit test"
/>
`;
